var sp=getSpotifyApi(),filesystem=sp.require("$util/fs"),lang=sp.require("$util/language"),models=sp.require("$api/models"),dom=sp.require("$util/dom"),r=sp.require("$util/react"),logger=sp.require("$util/logger"),storage=sp.require("$util/storage"),proto=sp.require("scripts/proto"),nano=sp.require("scripts/nano-scroller-light"),langCatalog=lang.loadCatalog("main"),translateLib=lang.getString.bind(lang,langCatalog),hermesBaseURL="hm://notifications/feed/"+sp.core.user.canonicalUsername+":inclient/",
SOCIAL_2_0_ON=!0,ui=null,social=null;SOCIAL_2_0_ON&&(ui=sp.require("$unstable/ui"),social=sp.require("$unstable/social"));
var NOTIFICATION_TYPE={playlistSubscribe:"playlist-sub",newFollower:"new-follower",friendJoined:"user-signup",playlistUpdated:"playlist-update",albumReleased:"album-release"},BUTTON_TYPE={follow:"follow",view:"view",play:"play"},SUB_TYPE={none:"none",starredSubscribe:"starred",toplistSubscribe:"toplist"},LOAD_STATE={unloaded:"unloaded",loading:"loading",loaded:"loaded",failed:"failed"},L_LEVEL={reg:-1,prod:0,debug:1,ver:2},MAX_CACHE_SIZE=500,CACHE_STORAGE_KEY="notifications",CURRENT_LOG_LEVEL=L_LEVEL.reg;
function clone(a){if(!a)return null;var b=a instanceof Array?[]:{},c;for(c in a)b[c]=a[c]&&"object"==typeof a[c]?clone(a[c]):a[c];return b}function sLog(a,b,c,e,d){e=e?""+e:"1";d=d?""+d:"1";a<=CURRENT_LOG_LEVEL&&(b&&console.log(b),c&&console.log(c));a==L_LEVEL.prod&&b&&(c=c?c:{},logger.logClientEvent("notification center",b,e,d,c))}function translate(a,b,c){!SOCIAL_2_0_ON&&c&&(a+="PreSocial");return translateLib(a,b)}
function Notification(a,b){if(b)this.notificationVerb=a.notificationVerb,this.sendersData=clone(a.sendersData),this.senderTotal=a.senderTotal,this.state=clone(a.state),this.playlistSubObjects=clone(a.playlistSubObjects),this.trackAddObjects=clone(a.trackAddObjects),this.albumReleaseObjects=clone(a.albumReleaseObjects);else{var c=a.in_client_data;this.notificationVerb=c.notification_verb;this.sendersData=clone(c.subject);this.senderTotal=c.subject_total;this.state=clone(c.state);this.playlistSubObjects=
clone(c.playlist_sub_object);this.trackAddObjects=clone(c.track_add_object);this.albumReleaseObjects=clone(c.album_release_object)}this.loadedModels={};this.subType=SUB_TYPE.none;this.outstandingCallbacks=0;this.loadFailureCallback=this.loadSuccessCallback=this.failureTimeout=null;this.loadState=LOAD_STATE.unloaded;this.MAX_PLAYLISTS=this.MAX_SENDERS=3;this.TIMEOUT_LENGTH=2E3;return this}
Notification.prototype.loadNodeInfo=function(a,b){function c(a,b){(b.notificationVerb==NOTIFICATION_TYPE.playlistSubscribe||b.notificationVerb==NOTIFICATION_TYPE.playlistUpdated)&&-1!==a.indexOf(SUB_TYPE.starredSubscribe,a.length-SUB_TYPE.starredSubscribe.length)?(b.subType=SUB_TYPE.starredSubscribe,b.loadFinished()):(b.notificationVerb==NOTIFICATION_TYPE.playlistSubscribe||b.notificationVerb==NOTIFICATION_TYPE.playlistUpdated)&&-1!==a.indexOf(SUB_TYPE.toplistSubscribe,a.length-SUB_TYPE.toplistSubscribe.length)?
(b.subType=SUB_TYPE.toplistSubscribe,b.loadFinished()):models.Playlist.fromURI(a,function(a){b.loadFinished(a)})}function e(a,b){models.Album.fromURI(a,function(a){b.loadFinished(a)})}if(this.loadState!=LOAD_STATE.unloaded)this.loadState==LOAD_STATE.loaded?a(this):this.loadState==LOAD_STATE.failed&&b(this);else{var d,f=this;this.loadState=LOAD_STATE.loading;this.loadSuccessCallback=a;this.loadFailureCallback=b;this.outstandingCallbacks=Math.min(this.sendersData?this.sendersData.length:0,this.MAX_SENDERS)+
Math.min(this.playlistSubObjects?this.playlistSubObjects.length:0,this.MAX_PLAYLISTS)+Math.min(this.trackAddObjects?this.trackAddObjects.length:0,this.MAX_PLAYLISTS)+(this.albumReleaseObjects?this.albumReleaseObjects.length:0);if(0==this.outstandingCallbacks)this.loadFinished();else{this.failureTimeout=setTimeout(function(){f.timeoutHit()},this.TIMEOUT_LENGTH);if(this.sendersData)for(d=0;d<this.sendersData.length&&d<this.MAX_SENDERS;d++)models.User.fromURI("spotify:user:"+this.sendersData[d].canonical_username,
function(a){f.loadFinished(a)});if(this.playlistSubObjects)for(d=0;d<this.playlistSubObjects.length&&d<this.MAX_PLAYLISTS;d++)c(this.playlistSubObjects[d].uri,this);if(this.trackAddObjects)for(d=0;d<this.trackAddObjects.length&&d<this.MAX_PLAYLISTS;d++)c(this.trackAddObjects[d].uri,this);if(this.albumReleaseObjects)for(d=0;d<this.albumReleaseObjects.length;d++)e("spotify:album:"+this.albumReleaseObjects[d].album_gid,this)}}};
Notification.prototype.timeoutHit=function(){sLog(L_LEVEL.debug,"notification-load-timeout");this.loadState=LOAD_STATE.failed;this.loadFailureCallback(this)};Notification.prototype.loadFinished=function(a){this.loadState==LOAD_STATE.loading&&(a&&(this.loadedModels[decodeURIComponent(a.uri)]=a),this.outstandingCallbacks--,0<this.outstandingCallbacks||(clearTimeout(this.failureTimeout),this.failureTimeout=null,this.loadState=LOAD_STATE.loaded,this.loadSuccessCallback(this)))};
Notification.prototype.getStringArrayForSystemNotification=function(){var a=[];switch(this.notificationVerb){case NOTIFICATION_TYPE.playlistSubscribe:a.push(translate("systemNotifications","sTitlePlaylistSubscribe",!0));a.push(lang.format(translate("systemNotifications","sBodyPlaylistSubscribe",!0),this.getSenderDisplayName()));break;case NOTIFICATION_TYPE.newFollower:a.push(translate("systemNotifications","sTitleNewFollower"));a.push(lang.format(translate("systemNotifications","sBodyNewFollower"),
this.getSenderDisplayName()));break;case NOTIFICATION_TYPE.friendJoined:a.push(translate("systemNotifications","sTitleFriendJoined"));a.push(lang.format(translate("systemNotifications","sBodyFriendJoined"),this.getSenderDisplayName()));break;case NOTIFICATION_TYPE.playlistUpdated:a.push(translate("systemNotifications","sTitlePlaylistUpdated")),a.push(lang.format(translate("systemNotifications","sBodyPlaylistUpdated"),this.getSenderDisplayName()))}return 2==a.length?a:[]};
Notification.prototype.getSenderDisplayName=function(){var a=this.sendersData[0],b=a.real_name;if(!b||0==b.length)b=(b=this.loadedModels["spotify:user:"+a.canonical_username])&&b.data&&b.data.name&&0<b.data.name.length?b.data.name:a.canonical_username;return b};
Notification.prototype.createNode=function(){function a(a){75<a.length&&(a=a.substring(0,74)+"\u2026");return a}function b(b){switch(b.notificationVerb){case NOTIFICATION_TYPE.playlistSubscribe:case NOTIFICATION_TYPE.newFollower:case NOTIFICATION_TYPE.friendJoined:case NOTIFICATION_TYPE.playlistUpdated:return'<a href="spotify:user:'+b.sendersData[0].canonical_username+'" class="senderName">'+a(b.getSenderDisplayName())+"</a>";case NOTIFICATION_TYPE.albumReleased:return'<a href="spotify:album:'+b.albumReleaseObjects[0].album_gid+
'" class="senderName">'+a(b.albumReleaseObjects[0].album_name)+"</a>"}}function c(a){switch(a.notificationVerb){case NOTIFICATION_TYPE.playlistUpdated:if(0<a.trackAddObjects.length&&a.trackAddObjects[0].track_uri&&0<a.trackAddObjects[0].track_uri.length)return a.trackAddObjects[0].track_uri[0]}return null}function e(b){switch(b.notificationVerb){case NOTIFICATION_TYPE.playlistUpdated:var c=null,d;d=b.trackAddObjects[0].uri;b.subType==SUB_TYPE.starredSubscribe?c=translate("notifications","sNotificationBodyStarredTracksUpdatedName"):
b.subType==SUB_TYPE.toplistSubscribe?c=translate("notifications","sNotificationBodyToplistUpdatedName"):b.loadedModels[decodeURIComponent(b.trackAddObjects[0].uri)]&&(c=a(b.loadedModels[decodeURIComponent(b.trackAddObjects[0].uri)].data.name));return!c?"":' <a href="'+d+'" class="objectName">'+c+"</a>";case NOTIFICATION_TYPE.playlistSubscribe:if(b.subType==SUB_TYPE.starredSubscribe||b.subType==SUB_TYPE.toplistSubscribe)break;c=b.playlistSubObjects[0];return(b=b.loadedModels[decodeURIComponent(c.uri)])?
' <a href="'+c.uri+'" class="objectName">'+a(b.data.name)+"</a>":"";case NOTIFICATION_TYPE.albumReleased:return c="spotify:artist:"+b.albumReleaseObjects[0].artist_gid,b=a(b.albumReleaseObjects[0].artist_name),' <a href="'+c+'" class="objectName">'+b+"</a>"}}function d(a){switch(a.notificationVerb){case NOTIFICATION_TYPE.playlistSubscribe:return a.subType==SUB_TYPE.starredSubscribe?translate("notifications","sNotificationBodyStarredSubscribe",!0):a.subType==SUB_TYPE.toplistSubscribe?translate("notifications",
"sNotificationBodyToplistSubscribe",!0):translate("notifications","sNotificationBodyPlaylistSubscribe",!0);case NOTIFICATION_TYPE.newFollower:return translate("notifications","sNotificationBodyNewFollower");case NOTIFICATION_TYPE.friendJoined:return translate("notifications","sNotificationBodyFriendJoined");case NOTIFICATION_TYPE.playlistUpdated:return a.trackAddObjects&&a.trackAddObjects[0]&&1==a.trackAddObjects[0].track_count?translate("notifications","sNotificationBodyPlaylistUpdatedSingular"):
translate("notifications","sNotificationBodyPlaylistUpdatedPlural");case NOTIFICATION_TYPE.albumReleased:return translate("notifications","sNotificationBodyAlbumReleased")}}function f(a){switch(a.notificationVerb){case NOTIFICATION_TYPE.playlistUpdated:if(a.trackAddObjects&&a.trackAddObjects[0]){if(1==a.trackAddObjects[0].track_count)break;return" "+a.trackAddObjects[0].track_count}return" some"}}function i(a){switch(a.notificationVerb){case NOTIFICATION_TYPE.newFollower:case NOTIFICATION_TYPE.friendJoined:if(SOCIAL_2_0_ON&&
!social.isSubscribed(a.sendersData[0].canonical_username))return BUTTON_TYPE.follow;break;case NOTIFICATION_TYPE.playlistUpdated:if(c(a))return BUTTON_TYPE.play}return BUTTON_TYPE.view}var g;a:{switch(this.notificationVerb){case NOTIFICATION_TYPE.playlistSubscribe:case NOTIFICATION_TYPE.newFollower:case NOTIFICATION_TYPE.friendJoined:case NOTIFICATION_TYPE.playlistUpdated:g=this.sendersData[0];var j=this.loadedModels["spotify:user:"+g.canonical_username];g='<a class="imageLink" href="spotify:user:'+
g.canonical_username+'"><div class="image" style="background-image: url('+(j&&j.data.icon&&0<j.data.icon.length?j.data.icon:"http://aro.spotify.s3.amazonaws.com/emails/notifications/user50x50.png")+');"></div></a>';break a;case NOTIFICATION_TYPE.albumReleased:g="spotify:album:"+this.albumReleaseObjects[0].album_gid;j="http://aro.spotify.s3.amazonaws.com/emails/notifications/user50x50.png";g in this.loadedModels&&(j=this.loadedModels[g].data.cover);g='<a href="'+g+'" class="imageLink"><div class="image" style="background-image: url('+
j+');"></div></a>';break a}g=void 0}a:{switch(this.notificationVerb){case NOTIFICATION_TYPE.playlistSubscribe:case NOTIFICATION_TYPE.newFollower:case NOTIFICATION_TYPE.friendJoined:case NOTIFICATION_TYPE.playlistUpdated:case NOTIFICATION_TYPE.albumReleased:j=lang.format(d(this),[b(this),e(this),f(this)]);break a}j=void 0}var h;this.state.notification_id_ms?(h=(new Date).getTime()-this.state.notification_id_ms,h=isNaN(h)||0>h?"":2E3>h?translate("time","sJustNow"):6E4>h?lang.format(translate("time",
"sSecondsAgo"),[Math.floor(h/1E3)]):12E4>h?translate("time","s1Minute"):36E5>h?lang.format(translate("time","sMinutesAgo"),[Math.floor(h/6E4)]):72E5>h?translate("time","s1Hour"):864E5>h?lang.format(translate("time","sHoursAgo"),[Math.floor(h/36E5)]):864E5<h&&1728E5>h?translate("time","sYesterday"):31536E6>h?lang.format(translate("time","sDaysAgo"),[Math.floor(h/864E5)]):translate("time","sOverAYear")):h="";g=[g,j,h];g=new dom.Element("div",{html:lang.format(filesystem.readFile("../notification.xml"),
g)});g.className="notification "+this.notificationVerb+(!this.state||!this.state.seen?" unread":"");g.id=this.getIdHex();g.dataset.timestamp=this.getTimeStamp();g.dataset.actionUrl=function(a){switch(a.notificationVerb){case NOTIFICATION_TYPE.playlistUpdated:return a.trackAddObjects[0].uri;case NOTIFICATION_TYPE.playlistSubscribe:return a.playlistSubObjects[0].uri;case NOTIFICATION_TYPE.albumReleased:return"spotify:album:"+a.albumReleaseObjects[0].album_gid;case NOTIFICATION_TYPE.newFollower:case NOTIFICATION_TYPE.friendJoined:return"spotify:user:"+
a.sendersData[0].canonical_username}}(this);g.dataset.playUrl=c(this);g.dataset.type=this.notificationVerb;g.dataset.buttonType=i(this);dom.queryOne(".buttonCell",g).appendChild(function(a){switch(i(a)){case BUTTON_TYPE.follow:return(new ui.SubscribeButton(a.sendersData[0].canonical_username)).node;case BUTTON_TYPE.view:case BUTTON_TYPE.play:var b=document.createElement("button");b.className="sp-button";a=i(a)==BUTTON_TYPE.view?"sViewButtonTitle":"sPlayButtonTitle";b.textContent=translate("buttons",
a);return b}}(this));return g};Notification.prototype.getIdHex=function(){return this.state?this.state.notification_id_hex:null};Notification.prototype.getTimeStamp=function(){return this.state?this.state.notification_id_ms:null};Notification.prototype.updateWithNewState=function(a){this.getIdHex()==a.notification_id_hex&&(this.state=clone(a))};
Notification.prototype.getLog=function(){return"      ID   : "+this.getTimeStamp()+" | "+this.getIdHex()+"\n      State: "+this.state.state_id_ms+" | "+this.state.state_id_hex+"\n"};function NotificationManager(a){this.fetchInProgress=!1;this.unreadCount=0;this.notifications=[];this.oldestNoteId="";this.oldestNoteTimestamp;this.newestNoteId="";this.newestNoteTimestamp;this.notificationDelegate=a;this.SECONDS_BETWEEN_POLLS=2;this.DEFAULT_PAGE_SIZE=50}
NotificationManager.prototype.startup=function(){this.loadCache();this.unreadCount=0;this.fetchInProgress=!1;this.startSubscription()};
NotificationManager.prototype.startSubscription=function(){var a=this;sp.core.addEventListener("hermes",function(b){a.notificationUpdatesReceived(b)},!1);sp.core.getHermes("SUB",hermesBaseURL,[],{onSuccess:function(){},onFailure:function(a){sLog(L_LEVEL.prod,"error-subscribe-failed",{code:a,url:hermesBaseURL})},onComplete:function(){a.getPageOfNotificationsFromServer(null,a.DEFAULT_PAGE_SIZE,!0);a.getBadgeCount()}})};
NotificationManager.prototype.notificationUpdatesReceived=function(a){if(0===a.data[0].indexOf("hm://notifications/feed/")&&(a=sp.core.parseHermesReply("Notification",a.data[1])))a=(a=this.notificationsReceived([a],!0))&&"number"==typeof a?a:0,0!=a&&(this.notificationDelegate&&!this.notificationDelegate.showing)&&this.setBadgeCount(-1==a?0:this.unreadCount+a)};
NotificationManager.prototype.getBadgeCount=function(){var a=this;sp.core.getHermes("GET",hermesBaseURL+"counts",[],{onSuccess:function(b){a.setBadgeCount(sp.core.parseHermesReply("NotificationCounts",b).active)},onFailure:function(a){sLog(L_LEVEL.prod,"error-badge-count-get-failed",{code:a,url:hermesBaseURL+"counts"})}})};NotificationManager.prototype.setBadgeCount=function(a){a="number"==typeof a?a:0;this.unreadCount!=a&&sp.desktop.notificationPopup.badgeCountUpdate(a);this.unreadCount=a};
NotificationManager.prototype.getCachedNotificationWithIdHex=function(a,b){for(var c=null,e=0,d=0;d<this.notifications.length;d++)if(this.notifications[d].getIdHex()==a){c=this.notifications[d];e=d;break}b&&c&&this.notifications.splice(e,1);return c};NotificationManager.prototype.trimCache=function(){this.notifications.length>MAX_CACHE_SIZE&&this.notifications.splice(MAX_CACHE_SIZE)};
NotificationManager.prototype.loadCache=function(){try{this.notifications=window.localStorage?JSON.parse(window.localStorage.getItem(CACHE_STORAGE_KEY))||[]:[];for(var a=0;a<this.notifications.length;a++)this.notifications[a]=new Notification(this.notifications[a],!0);0<this.notifications.length&&(this.oldestNoteTimestamp=this.notifications[this.notifications.length-1].state.notification_id_ms,this.oldestNoteId=this.notifications[this.notifications.length-1].state.notification_id_hex,this.newestNoteTimestamp=
this.notifications[0].state.notification_id_ms,this.newestNoteId=this.notifications[0].state.notification_id_hex)}catch(b){sLog(L_LEVEL.prod,"error-invalid-cache-data",{data:window.localStorage.getItem(CACHE_STORAGE_KEY)}),this.clearCache()}};NotificationManager.prototype.clearCache=function(){this.notifications=[];this.oldestNoteId="";this.oldestNoteTimestamp=0;this.newestNoteId="";this.newestNoteTimestamp=0;this.saveCache()};
NotificationManager.prototype.saveCache=function(){if(window.localStorage){for(var a=[],b=0;b<this.notifications.length;b++)a.push(new Notification(this.notifications[b],!0));a=JSON.stringify(a);window.localStorage.setItem(CACHE_STORAGE_KEY,a)}};
NotificationManager.prototype.insertNotificationIntoCache=function(a,b){for(var c=a.getTimeStamp(),e=a.getIdHex(),d=-1,f=0;f<this.notifications.length;f++)if(-1==d&&c>this.notifications[f].getTimeStamp()&&(d=f),this.notifications[f].getIdHex()==e)return!1;-1==d?this.notifications.push(a):this.notifications.splice(d,0,a);b&&this.trimCache();this.oldestNoteTimestamp=this.notifications[this.notifications.length-1].state.notification_id_ms;this.oldestNoteId=this.notifications[this.notifications.length-
1].state.notification_id_hex;this.newestNoteTimestamp=this.notifications[0].state.notification_id_ms;this.newestNoteId=this.notifications[0].state.notification_id_hex;this.saveCache();return!0};NotificationManager.prototype.notificationDataIsValid=function(a){return a&&a.state&&a.state.notification_id_hex&&a.state.notification_id_ms?!0:!1};
NotificationManager.prototype.notificationDataIsAccepted=function(a){var b=!1;if(!a.state.dismissed&&a.subject&&0<a.subject.length)switch(a.notification_verb){case NOTIFICATION_TYPE.playlistUpdated:b=a.track_add_object&&0<a.track_add_object.length?!0:!1;break;case NOTIFICATION_TYPE.playlistSubscribe:b=a.playlist_sub_object&&0<a.playlist_sub_object.length?!0:!1;break;case NOTIFICATION_TYPE.newFollower:b=SOCIAL_2_0_ON;break;case NOTIFICATION_TYPE.friendJoined:b=!0;break;default:b=!1}else if(!a.state.dismissed)switch(a.notification_verb){case NOTIFICATION_TYPE.albumReleased:b=
a.album_release_object&&0<a.album_release_object.length?!0:!1;break;default:b=!1}return b};NotificationManager.prototype.getCacheStateDescription=function(){for(var a=1<this.notifications.length?"":"    NONE",b=0;b<this.notifications.length;b++)a+="    NOTE "+b+"\n",a+=this.notifications[b].getLog();return a};
NotificationManager.prototype.notificationsReceived=function(a,b){var c=[],e=[],d=!1,f=null;sLog(L_LEVEL.debug,"notifications-received"+(b?"-subscription":""),a);sLog(L_LEVEL.ver,"cache-stat-pre-insertion",this.getCacheStateDescription());if(a&&0!==a.length){for(var i=0;i<a.length;i++)if(this.notificationDataIsValid(a[i].in_client_data))if(f=a[i].in_client_data,1==a[i].type)if(f.state.seen){for(f=0;f<this.notifications.length;f++)this.notifications[f].state.seen=!0;b&&(d=!0)}else f.state.dismissed&&
(this.notifications=[],this.oldestNoteId="",this.oldestNoteTimestamp=0,b&&(d=!0));else if(7==a[i].type){var g=this.getCachedNotificationWithIdHex(f.state.notification_id_hex);g?(g.updateWithNewState(f.state),e.push(g),sLog(L_LEVEL.debug,"update-cached-notification",{"notification-id":g.getIdHex()})):sLog(L_LEVEL.debug,"drop-notification-update",{"notification-id":f.state.notification_id_hex})}else this.notificationDataIsAccepted(f)?(g=new Notification(a[i]),this.insertNotificationIntoCache(g,b)&&
(sLog(L_LEVEL.prod,"new-note-received",{"notification-id":f.state.notification_id_hex}),e.push(g),c.push(g),"album-release"!=g.notificationVerb&&models.User.fromURI("spotify:user:"+g.sendersData[0].canonical_username))):sLog(L_LEVEL.debug,"unaccepted-notification-received",{"notification-id":f.state.notification_id_hex});else sLog(L_LEVEL.prod,"error-invalid-notification-data-received",{data:a[i].in_client_data});this.notificationDelegate&&this.notificationDelegate.displayNewOrUpdatedNotifications&&
this.notificationDelegate.displayNewOrUpdatedNotifications(e);if(b&&0<c.length){e=[];for(i=0;i<c.length;i++)e=e.concat(c[i].getStringArrayForSystemNotification());sp.desktop.notificationPopup.notificationsRecieved(e)}sLog(L_LEVEL.ver,"cache-stat-post-insertion",this.getCacheStateDescription());return d?-1:c.length}};
NotificationManager.prototype.readAllNotes=function(a){sLog(L_LEVEL.debug,"read-all-notifications");var b;b={seen:!0};for(var c=0;c<this.notifications.length;c++)this.notifications[c].state.seen=!0;this.saveCache();this.setBadgeCount(0);if(a){var e=hermesBaseURL+"states/all/";sp.core.getHermes("PUT",e,[["NotificationState",b]],{onSuccess:function(){sLog(L_LEVEL.prod,"read-all-notes-success",{hermesUrl:e})},onFailure:function(a){sLog(L_LEVEL.prod,"error-read-all-notes-failed",{errorCode:a,hermesUrl:e})}})}};
NotificationManager.prototype.deleteAllNotes=function(){this.clearCache();var a=hermesBaseURL+"states/all/";sp.core.getHermes("PUT",a,[["NotificationState",{dismissed:!0}]],{onSuccess:function(){sLog(L_LEVEL.prod,"delete-all-notes-success",{hermesUrl:a})},onFailure:function(b){sLog(L_LEVEL.prod,"error-delete-all-notes-failed",{errorCode:b,hermesUrl:a})}})};
NotificationManager.prototype.getPageOfNotifications=function(a,b){var b=b?b:this.DEFAULT_PAGE_SIZE,c=0<this.notifications.length?0:-1;if(a)for(var c=-1,e=this.notifications.length-2;0<=e;e--)if(this.notifications[e].getIdHex()==a){c=e+1;break}-1!=c&&(0>=c+b-this.notifications.length?b=0:a=this.oldestNoteId,this.notificationDelegate&&this.notificationDelegate.displayNewOrUpdatedNotifications&&this.notificationDelegate.displayNewOrUpdatedNotifications(this.notifications.slice(c,this.notifications.length)));
b&&this.getPageOfNotificationsFromServer(a,b,!1)};
NotificationManager.prototype.getPageOfNotificationsFromServer=function(a,b,c){var e=this,d=hermesBaseURL+(a?"from/"+a+"/":"")+"take/"+b;c&&this.newestNoteId&&(d+="/?etag="+this.newestNoteId);sLog(L_LEVEL.debug,"get-page-of-notifications",{hermesUrl:d});c&&sLog(L_LEVEL.prod,"do-initial-cache-check",{hermesUrl:d});this.fetchInProgress=!0;sp.core.getHermes("GET",d,[],{onSuccess:function(a){c&&(sLog(L_LEVEL.prod,"cache-dirty",{hermesUrl:d}),e.clearCache());e.hermesGetSuccess(a,b)},onFailure:function(a){this.fetchInProgress=
!1;c&&5404==a?sLog(L_LEVEL.prod,"cache-ok",{hermesUrl:d}):(e.notificationDelegate&&e.notificationDelegate.showError&&e.notificationDelegate.showError(),sLog(L_LEVEL.prod,"error-get-page-failed",{errorCode:a,hermesUrl:d}))}})};
NotificationManager.prototype.hermesGetSuccess=function(a,b){sLog(L_LEVEL.debug,"hermes-get-success");var c=sp.core.parseHermesReply("NotificationList",a);this.fetchInProgress=!1;c&&(c.notification&&0<c.notification.length)&&this.notificationsReceived(c.notification);(!c||!c.notification||c.notification.length<b)&&(this.notificationDelegate&&this.notificationDelegate.noMoreNotificationsToLoad)&&this.notificationDelegate.noMoreNotificationsToLoad()};
function NotificationPopup(){this.reconnectOnClose=this.showing=!1;this.lastConnectedTime=0;this.selectedNode=null;this.notificationsLoading=0;var a=this;this.scroller=nano.scroller(document.getElementById("notificationList"),function(){a.nearBottomCallback()});this.noMoreNotes=!1;this.NOTES_PER_PAGE=6;this.noteCenterNode=document.getElementById("noteCenter");document.getElementById("topBar").innerHTML=translate("mainUI","sTitle");this.notificationManager=new NotificationManager(this);sp.desktop.notificationPopup&&
1!=sp.core.getArguments()[0]?(sp.desktop.notificationPopup.addEventListener("shownPop",function(){a.show()}),sp.desktop.notificationPopup.addEventListener("closingPop",function(){a.closePop()}),sp.desktop.notificationPopup.addEventListener("moveup",function(){a.keyUp()}),sp.desktop.notificationPopup.addEventListener("movedown",function(){a.keyDown()}),sp.desktop.notificationPopup.addEventListener("doActionOnSelectedNote",function(){a.doActionOnSelectedNote()}),setTimeout(function(){a.reconnect();
setTimeout(function(){models.session.observe(models.EVENT.LOGIN,function(){a.reconnect()})},3E3)},3E3)):(this.notificationManager.startup(),this.show())}NotificationPopup.prototype.reconnect=function(){this.showing?this.reconnectOnClose=!0:this.notificationManager.startup()};NotificationPopup.prototype.checkConnection=function(){if(1==sp.core.getLoginMode()){var a=(new Date).getTime();4E3<a-this.lastConnectedTime&&this.reconnect();this.lastConnectedTime=a}};
NotificationPopup.prototype.show=function(){this.showing=!0;this.notificationManager.getPageOfNotifications();document.getElementById("noMoreMessage").innerHTML=translate("mainUI","sNoMoreMessage");sLog(L_LEVEL.prod,"shown")};
NotificationPopup.prototype.closePop=function(){this.showing=!1;this.notificationManager.readAllNotes(0<this.notificationManager.unreadCount||dom.queryOne(".unread"));document.getElementById("notificationListContent").innerHTML="";this.noteCenterNode.classList.remove("loaded");this.noteCenterNode.classList.remove("empty");this.scroller.reset();this.selectedNode=null;this.noMoreNotes=!1;this.reconnectOnClose&&(this.reconnectOnClose=!1,this.notificationManager.startup())};
NotificationPopup.prototype.showError=function(){this.showing&&(document.getElementById("noMoreMessage").innerHTML=translate("mainUI","sLoadError"),this.noteCenterNode.classList.add("empty"))};NotificationPopup.prototype.displayNewOrUpdatedNotifications=function(a){sLog(L_LEVEL.ver,"displaying-notifications",a);if(this.showing){var b=this;this.notificationsLoading+=a.length;for(var c=0;c<a.length;c++)a[c].loadNodeInfo(function(a){b.displayLoadedNotification(a)},function(a){b.notificationFailedToLoad(a)})}};
NotificationPopup.prototype.displayLoadedNotification=function(a){function b(a,b,c){return function(){c.linkHit(a,b)}}var c=this,e=document.getElementById("notificationListContent"),d;this.notificationsLoading--;d=document.getElementById(a.getIdHex());if(!d){d=a.createNode();a=dom.query("a",d);r.fromDOMEvent(dom.queryOne("button",d),"click").subscribe(function(){c.buttonHit(d)});for(var f=0;f<a.length;f++)r.fromDOMEvent(a[f],"click").subscribe(b(a[f],d,c));a=e.childNodes;for(f=0;a&&f<a.length&&a[f].dataset.timestamp>
d.dataset.timestamp;)f++;a&&f<a.length?e.insertBefore(d,a[f]):e.appendChild(d);this.noteCenterNode.classList.add("loaded");this.noteCenterNode.classList.remove("empty");document.getElementById("noMoreMessage").innerHTML=translate("mainUI","sNoMoreMessage");sp.desktop.notificationPopup&&sp.desktop.notificationPopup.setHeight(this.noteCenterNode.clientHeight);setTimeout(function(){c.scroller.reset();sp.desktop.notificationPopup.setHeight(c.noteCenterNode.clientHeight)},1)}};
NotificationPopup.prototype.notificationFailedToLoad=function(){this.notificationsLoading--;0===this.notificationsLoading&&0===dom.query(".notification").length&&this.emptyListHandler()};NotificationPopup.prototype.noMoreNotificationsToLoad=function(){this.showing&&(0===dom.query(".notification").length&&(this.noteCenterNode.classList.remove("loaded"),this.noteCenterNode.classList.add("empty")),this.noMoreNotes=!0)};
NotificationPopup.prototype.emptyListHandler=function(a){this.noteCenterNode.classList.remove("loaded");this.scroller.reset();sp.desktop.notificationPopup&&sp.desktop.notificationPopup.setHeight(this.noteCenterNode.clientHeight);a?this.noMoreNotificationsToLoad():this.notificationManager.getPageOfNotifications(null)};
NotificationPopup.prototype.nearBottomCallback=function(){if(!this.fetchInProgress&&!this.noMoreNotes){var a=dom.query(".notification");a&&0<a.length&&this.notificationManager.getPageOfNotifications(a[a.length-1].id)}};
NotificationPopup.prototype.buttonHit=function(a){sLog(L_LEVEL.prod,"button-hit",{id:a.id,data:a.dataset});switch(a.dataset.buttonType){case BUTTON_TYPE.play:models.player.play(a.dataset.playUrl,a.dataset.actionUrl);this.linkHit(a.dataset.actionUrl,a,!0);break;case BUTTON_TYPE.view:this.linkHit(a.dataset.actionUrl,a,!0)}};NotificationPopup.prototype.linkHit=function(a,b,c){event&&event.preventDefault();sp.desktop.notificationPopup.openLink(decodeURIComponent(a));c||sLog(L_LEVEL.prod,"link-hit",{url:a})};
NotificationPopup.prototype.keyUp=function(){this.keyBoardMove(!0)};NotificationPopup.prototype.keyDown=function(){this.keyBoardMove(!1)};NotificationPopup.prototype.keyBoardMove=function(a){if(this.selectedNode||!a)(a=this.selectedNode?a?this.selectedNode.previousSibling:this.selectedNode.nextSibling:dom.queryOne(".notification"))&&this.selectNode(a)};
NotificationPopup.prototype.selectNode=function(a){this.selectedNode!=a&&(this.selectedNode&&this.selectedNode.classList.remove("selected"),a&&a.classList.add("selected"),this.selectedNode=a);var b=a.offsetTop,a=a.clientHeight,c=document.getElementById("notificationListContent");c.scrollTop>b?c.scrollTop=b:c.scrollTop+c.clientHeight<b+a&&(c.scrollTop=b+a-c.clientHeight)};
NotificationPopup.prototype.doActionOnSelectedNote=function(){if(this.selectedNode){var a=dom.queryOne("button",this.selectedNode);a&&a.click()}};var notePopup=new NotificationPopup;
